--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* style.css or any other CSS file */
+/* body {
+    font-family: 'Boldonse', sans-serif;
+  } */
+  
+  /* If you want to apply it to specific elements, you can target them directly */
+  .hero-text {
+    font-family: 'Boldonse';
+  }
+  
+
