--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body{
 
-  background: #e0e0f0;
+  background: #000000;
   height: 100%;
 
  }
@@ -18,3 +18,12 @@ body {
 body::-webkit-scrollbar {
   display: none; /* For Chrome, Safari, and Edge */
 }
+
+
+/* In your global CSS file */
+.neon-shadow {
+  box-shadow: 0 0 15px 5px rgba(24, 14, 119, 0.7), 0 0 30px 10px rgba(42, 54, 219, 0.5);
+}
+
+
+
